fixed problem with friend classes not resolving, fixed offset calculations for qualified name nodes